[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
console_error_panic_hook = "0.1.7"
deno_ast = { version = "0.26.0", features = ["codegen", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling", "view"] }
deno_graph = { path = "../../deno_graph" }
indexmap = "1.9.3"
js-sys = "=0.3.63"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "=0.5.0"
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "=0.4.36"

[dev-dependencies]
futures = "0.3.17"
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
