[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
console_error_panic_hook = "0.1.7"
deno_ast = { version = "0.27.1", features = ["codegen", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
deno_graph = { version = "0.49.0", features = ["type_tracing"], path = "../../deno_graph" }
indexmap = "1.9.3"
import_map = "0.15.0"
jsonc-parser = { version = "0.21.1", features = ["serde"] }
js-sys = "=0.3.63"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde-wasm-bindgen = "=0.5.0"
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "=0.4.36"

[dev-dependencies]
futures = "0.3.17"
pretty_assertions = "1.0.0"
tokio = { version = "1.11.0", features = ["full"] }
